bs-region image fix + stretch wellness

--- a/bs-website/src/app/bs-region/bs-region.component.scss
+++ b/bs-website/src/app/bs-region/bs-region.component.scss
@@ -21,41 +21,14 @@
   max-width: 400px;
   .text {
     position: absolute;
+    margin-top: 20px;
+    margin-left: 10px;
     background-color: rgba(255, 255, 255, 0.7);
+    color: black;
     border-radius: 1em;
     padding: 0.7em;
-    margin: 2em;
   }
   img {
     width: 100%;
-    //height: 300px;
-  }
-}
-
-.dream {
-  height: 400px;
-  overflow: hidden;
-  video {
-    z-index: 0;
-    width: 100%;
-  }
-  h2 {
-    position: absolute;
-    z-index: 1;
-    top: 30%;
-    left: 20%;
-    font-family: cursive;
-    width: 60%;
-    font-size: xx-large;
-    font-weight: 400;
-    text-shadow: 1em;
-    text-align: center;
-    font-size: 4em;
-    line-height: 1em;
-    background-color: rgba(255, 255, 255, 0.56);
-    border-radius: 0.2em;
-    color: black;
-    padding: 0.15em;
-    padding-top: 20px;
   }
 }
