--- a/bs-website/src/app/bs-wellness/bs-wellness.component.scss
+++ b/bs-website/src/app/bs-wellness/bs-wellness.component.scss
@@ -12,6 +12,7 @@
 .wellness {
   width: 50%;
   background-image: url("../../assets/images/wellness/wellness_repos.webp");
+  background-size: 100% 100%;
   display: flex;
 }
 
